# tvb-ext-xircuits

./: .gitignore  .gitmodules  .tvb_ext_bucket.log.2024-02-14  MANIFEST.in  README.md  codemeta.json  generate_description_files.py  install.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  tsconfig.eslint.json  tsconfig.tsbuildinfo  untitled1.xircuits
.github/workflows/: build-python-wheel.yml  ebrains-sync.yml  pypi-github-release-publish.yml  pypi-publish.yml  run-python-tests.yml
.xircuits/: component_library_config.json  config.ini
docker/: Dockerfile-hpc
examples/: TVB.xircuits
hpc_config/: parse_files.py  pyunicore_config.py
jupyter-config/nb-config/: xircuits.json
jupyter-config/server-config/: xircuits.json
src/: XircuitsFactory.ts  XircuitsWidget.tsx  index.tsx  siteUtils.ts  xircuitFactory.ts  xircuitWidget.tsx
src/commands/: CommandIDs.tsx  NodeActionCommands.tsx
src/components/: CustomNodeWidget.tsx  RunSwitcher.tsx  XircuitsBodyWidget.tsx  xircuitBodyWidget.tsx
src/context-menu/: CanvasContextMenu.tsx  NodeActionsPanel.tsx  TrayContextMenu.tsx
src/dialog/: LiteralInputDialog.tsx  RemoteRunDialog.tsx  RunDialog.tsx
src/helpers/: InputSanitizer.tsx
src/tray_library/: AdvanceComponentLib.tsx  GeneralComponentLib.tsx  Sidebar.tsx
style/: ComponentInfo.css  base.css
tests/xircuits/: test_model_config_loader.py  test_notebook_generator.py
tvbextxircuits/: __init__.py  _version.py  hatch_build_hook.py  nb_generator.py  start_xircuits.py  utils.py
tvbextxircuits/.xircuits/: config.ini
tvbextxircuits/compiler/: compiler.py  generator.py  node.py  parser.py
tvbextxircuits/handlers/: __init__.py  compile_xircuits.py  component_parser.py  components.py  config.py  json_parser.py  request_folder.py  request_library.py  request_submodule.py
tvbextxircuits/hpc_config/: parse_files.py  pyunicore_config.py
tvbextxircuits/logger/: logging.conf
xai_components/: base.py  base_tvb.py  utils.py
xai_components/logger/: builder.py  logging.conf
xai_components/xai_connectivity/: connectivity.py  siibra_connectivity.py
xai_components/xai_sensors/: sensors.py
xai_components/xai_storage/: store_results.py
xai_components/xai_test_compoments/: test_components.py
xai_components/xai_tvb/: showcase1.py  simulator_code.py  ts_widget_code.py  utils.py
xai_components/xai_tvb_backends/: basic.py  nb_mpr.py
xai_components/xai_tvb_connectivity/: connectivity.py
xai_components/xai_tvb_coupling/: coupling.py  coupling_components.py
xai_components/xai_tvb_equations/: equations.py
xai_components/xai_tvb_integrators/: integrators.py
xai_components/xai_tvb_models/: epileptor.py  epileptorT.py  epileptor_components.py  epileptor_rs.py  epileptorcodim3.py  hopfield.py  hopfield_components.py  infinite_theta.py  janen_rit_components.py  jansen_rit.py  kuramotoT.py  larter_breakspear.py  larter_breakspear_components.py  linear.py  model_components.py  oscillator.py  stefanescu_jirsa.py  wilson_cowan.py  wilson_cowan_components.py  wong_wang.py  wong_wang_exc_inh.py  wong_wang_exc_inh_components.py  zerlaut.py
xai_workflows/: numpy_workflow_test.xircuits  parse_files.py  pyunicore_config.py  pyunicore_test.py  showcase1.xircuits  simulator.xircuits
xircuits/: _version.py  nb_generator.py
(+30 files in other folders)
