[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "tvbextxircuits"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyterlab>=4.0.0,<4.1",
    "jupyter_server>=2.0.1,<3",
    "requests",
    "gitpython",
    "pygithub",
    "tqdm",
    "toml",
    "pyunicore",
    "siibra",
    "tvb-library",
    "tvb-gdist==2.1.0",
    "tvb-framework",
    "tvb-ext-bucket",
    "tvb-ext-unicore",
    "tvb-widgets>=1.0",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
include-only = [
    "xai_components/",
    "tvbextxircuits/",
]
artifacts = ["tvbextxircuits/labextension"]
exclude = [".github", "binder", "node_modules", "lib", ".yarn"]

[tool.hatch.build.targets.wheel.shared-data]
"tvbextxircuits/labextension" = "share/jupyter/labextensions/tvbextxircuits"
"install.json" = "share/jupyter/labextensions/tvbextxircuits/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "tvbextxircuits/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "tvbextxircuits/labextension/static/style.js",
    "tvbextxircuits/labextension/package.json",
]
skip-if-exists = ["tvbextxircuits/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "tvbextxircuits/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[project.scripts]
tvbextxircuits = "tvbextxircuits.start_xircuits:main"

[tool.hatch.build.hooks.custom]
path = "tvbextxircuits/hatch_build_hook.py"

[tool.hatch.build.targets.wheel]
include = [
    "xai_components/",
    "tvbextxircuits/",
    "examples/",
]
artifacts = ["tvbextxircuits/labextension"]